<resources>
    <string name="app_name">todo comida</string>
    <string name="inicio">Inicio</string>
    <string name="locales">Locales</string>
    <string name="mapa">Mapa</string>
    <string name="imagen">Imagen</string>
    <string name="email">Email</string>
    <string name="contrase_a">Contraseña</string>
    <string name="olvido_su_contrase_a">¿Olvido su contraseña?</string>
    <string name="ingresar">Ingresar/registrarse</string>
    <string name="continuar_con_google">Continuar con Google</string>
    <string name="continuar_con_facebook">Continuar con Facebook</string>
    <string name="todo_comida">TODO COMIDA</string>
    <string name="buscar">Buscar</string>
    <string name="contacto">Contacto</string>
</resources>